--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.6",
     "vue-router": "^4.0.3",
