--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.6",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-module-decorators": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -22,6 +23,7 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "node-sass": "^7.0.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.6.0",
